@@ -114,27 +114,30 @@ let draw state =
   (* Draw game board here *)
   let unit = Graphics.size_x()/10 in
     let base_color terrain xpos ypos=
-	if terrain = Default then 
-	  Graphics.set_color 0x999900
-	else if terrain = Forest then
-	  Graphics.set_color 0x196619
+	if terrain = Default then (
+	  Graphics.set_color 0x999900;
+	  Graphics.fill_rect xpos ypos unit unit		  
+	)
+	else if terrain = Forest then (
+	  Graphics.set_color 0x196619;
+ 	  Graphics.fill_rect xpos ypos unit unit		  
+	)
 	else if terrain = Hills then
-	 (*(
+	 (
 	  let test_draw =
-	    "img/terrain_test.png"
+	    "img/mountain.png"
 	    |> Load_image.load_array
 	    |> Load_image.sub_image 0 0 (unit) (unit) (Some (0x00FFFF))
 	  in
 	  Graphics.draw_image test_draw xpos ypos
-	)*)
+	)
 	  
-	  Graphics.set_color 0x999999 
+	 (* Graphics.set_color 0x999999 *)
     in
 
     let rec draw_row xpos ypos = function
        | hd::tl -> 
 	base_color hd xpos ypos; 
-	Graphics.fill_rect xpos ypos unit unit;		  
 	Graphics.set_color Graphics.black;
 	Graphics.set_line_width 1;
 	Graphics.draw_rect xpos ypos unit unit;
